# MINE

./: .coveragerc.posix  .coveragerc.windows  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: dist-manifest.json  requirements-dev.txt
docs/: BASELINE.md  CHANGELOG.md  CLAIMS.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  METRICS.md
scripts/: _logging.py  build_dist.py  check_version_drift.py  install.ps1  install.sh  install_skills.py
skills/_shared/: __init__.py  _bootstrap.py  artifact_types.py  cli_helpers.py  hash_helpers.py  logging_utils.py  path_safety.py  platform_utils.py  redaction.py  safe_io.py  skill_creator_bridge.py  url_utils.py
skills/mine/: SKILL.md
skills/mine-mine/: SKILL.md
skills/mine-mine/references/: REFERENCE.md
skills/mine-mine/scripts/: _init_shared.py  cache_eviction.py  discover_integrations.py  git_helpers.py  transaction.py  update_integrations.py
skills/mine/references/: REFERENCE.md
skills/mine/scripts/: _init_shared.py  agentic_converter.py  (+7 more)
tests/: conftest.py  test_artifact_types.py  test_askpass.py  test_build_dist.py  test_cache_collision.py  test_cli_helpers.py  test_discover_cli_ui.py  test_discover_modules.py  test_discover_orchestration.py  test_doc_claims.py  test_file_lifecycle.py  test_force_push.py  test_framework_detection.py  test_generate_skillpack.py  test_git_helpers.py  test_git_helpers_auth.py  test_golden_e2e.py  test_hash_helpers.py  test_hooks_safety.py  test_import_assets.py  test_import_safety.py  test_initial_import_safety.py  test_logging_utils.py  test_orchestration.py  test_path_safety.py  test_platform_utils.py  test_safe_io.py  test_scan_safety.py  test_secret_redaction.py  test_shared_coverage_gaps.py  test_skill_creator_bridge.py  test_transaction.py  test_update_path_safety.py  test_url_redaction.py
(+10 files in other folders)
